change content tabs block